// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hlwint API Service able to create broadcast 1`] = `
Object {
  "data": Object {
    "b_start_time": "2018-01-17 13:30:47",
    "b_title": "test title",
    "b_user_id": 384,
    "hash": "530d385bcfaa2d304d9b8ff992ecbf60",
    "id": 8,
    "rviewers": 0,
    "tviewers": 0,
    "viewers": 0,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to create tag 1`] = `
Object {
  "data": Object {
    "id": 207,
    "t_color_code": "#c095de",
    "t_count": 13,
    "t_name": "TESTAG",
    "t_status": "active",
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to end broadcast 1`] = `
Object {
  "message": "success",
}
`;

exports[`Hlwint API Service able to follow user 1`] = `
Object {
  "message": "insert success",
}
`;

exports[`Hlwint API Service able to get Broadcast Detail 1`] = `
Object {
  "data": Object {
    "b_end_time": null,
    "b_start_time": "2018-01-17 13:23:57",
    "b_title": "bb",
    "b_user_id": 625,
    "hash": "6c2d292ea0effd923d98cada2fc9044f",
    "id": 1,
    "rviewers": 0,
    "tviewers": 0,
    "viewers": 0,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to get Top Ranked user 1`] = `
Object {
  "message": "success",
  "toprank": Array [
    Object {
      "id": 8578,
      "live": 0,
      "rank": "350",
      "u_first_name": "Ms.Yoon",
      "u_follower_count": 134,
      "u_last_name": "Yoon",
      "u_nick_name": "ms.yoon8578",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/15_23_548578_profile.png",
    },
    Object {
      "id": 1828,
      "live": 0,
      "rank": "310",
      "u_first_name": "Jue Jue",
      "u_follower_count": 270,
      "u_last_name": "Thit Sar",
      "u_nick_name": "juejue1828",
      "u_profile_pic": "https://graph.facebook.com/559327204410431/picture?type=large",
    },
    Object {
      "id": 2498,
      "live": 0,
      "rank": "290",
      "u_first_name": "Thun",
      "u_follower_count": 262,
      "u_last_name": "Zaw",
      "u_nick_name": "thun2498",
      "u_profile_pic": "https://graph.facebook.com/1882290015114642/picture?type=large",
    },
    Object {
      "id": 1877,
      "live": 0,
      "rank": "265",
      "u_first_name": "Eaindray",
      "u_follower_count": 319,
      "u_last_name": "Chit Su",
      "u_nick_name": "eaindray1877",
      "u_profile_pic": "https://graph.facebook.com/818952491620096/picture?type=large",
    },
    Object {
      "id": 2499,
      "live": 0,
      "rank": "252",
      "u_first_name": "PhomeShein",
      "u_follower_count": 391,
      "u_last_name": "Htet",
      "u_nick_name": "phomeshein2499",
      "u_profile_pic": "https://graph.facebook.com/901009120057896/picture?type=large",
    },
    Object {
      "id": 2246,
      "live": 0,
      "rank": "190",
      "u_first_name": "Thaw",
      "u_follower_count": 81,
      "u_last_name": "De Nyein",
      "u_nick_name": "thaw2246",
      "u_profile_pic": "https://graph.facebook.com/545953062422901/picture?type=large",
    },
    Object {
      "id": 70,
      "live": 0,
      "rank": "167",
      "u_first_name": "kay",
      "u_follower_count": 507,
      "u_last_name": "kay",
      "u_nick_name": "yati21",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/13_23_5970_profile.png",
    },
    Object {
      "id": 8399,
      "live": 0,
      "rank": "160",
      "u_first_name": "Su",
      "u_follower_count": 79,
      "u_last_name": "Win",
      "u_nick_name": "su8399",
      "u_profile_pic": "https://graph.facebook.com/2117869858499500/picture?type=large",
    },
    Object {
      "id": 2508,
      "live": 0,
      "rank": "154",
      "u_first_name": "Pyae",
      "u_follower_count": 11,
      "u_last_name": "Sone",
      "u_nick_name": "pyae2508",
      "u_profile_pic": "https://graph.facebook.com/336019600145612/picture?type=large",
    },
    Object {
      "id": 7719,
      "live": 0,
      "rank": "150",
      "u_first_name": "AungSeng",
      "u_follower_count": 43,
      "u_last_name": "Melvin",
      "u_nick_name": "aungseng7719",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/22_49_107719_profile.png",
    },
  ],
}
`;

exports[`Hlwint API Service able to get broadcaster ended data 1`] = `
Object {
  "data": Object {
    "duration": "00:00:18",
    "first_name": "Ko",
    "id": 384,
    "last_name": "Kyaw",
    "new_follower": 0,
    "new_income": 0,
    "nick_name": "ko384",
    "profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    "tag": Array [
      Object {
        "id": 1,
        "t_color_code": "#CCAAEE",
        "t_name": "#beautytips",
      },
      Object {
        "id": 2,
        "t_color_code": "#958882",
        "t_name": "#singing",
      },
    ],
    "title": "test title",
    "total_view": 9,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to get current user profile 1`] = `
Object {
  "data": Object {
    "bot": 0,
    "data_usage": null,
    "id": 384,
    "u_account_status": "active",
    "u_biography": null,
    "u_city": "Pathein",
    "u_coins": 3620,
    "u_created_time": "2017-11-13 15:36:22",
    "u_date_of_birth": "null",
    "u_device_os": "android",
    "u_duration": "00:00:00",
    "u_email": "null",
    "u_facebook_id": "367599367030660",
    "u_fan_count": 0,
    "u_first_name": "Ko",
    "u_follower_count": 1,
    "u_full_name": "Ko Kyaw",
    "u_gender": "female",
    "u_google_id": "null",
    "u_income": 0,
    "u_ip_address": "119.2.52.244",
    "u_key_id": "91600",
    "u_larger_profile_pic": null,
    "u_last_device": "android test",
    "u_last_login_time": "2018-01-17 13:30:11",
    "u_last_name": "Kyaw",
    "u_nick_name": "ko384",
    "u_phone_number": "09",
    "u_profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    "u_reason_banned": "",
    "u_reward_status": 0,
    "u_token": "Nxnh8YrnscLLXTKOygyr13FNQuQEPH46MloyYnfXjQstwGWaUmyhz4zzmwzV",
    "u_type": 1,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to get explore data 1`] = `
Object {
  "image": "https://dashboard.imliveapp.com/public/mlive_img/mlive.png",
  "message": "success",
  "nearby": Array [
    Object {
      "id": 3018,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1583112471734457/picture?type=large",
    },
    Object {
      "id": 4112,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1668681356530530/picture?type=large",
    },
    Object {
      "id": 1768,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1737245439621574/picture?type=large",
    },
    Object {
      "id": 3194,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/2018473215104706/picture?type=large",
    },
    Object {
      "id": 2085,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1972688356314634/picture?type=large",
    },
    Object {
      "id": 52,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/362155060911834/picture?type=large",
    },
    Object {
      "id": 16,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/1602460376480950/picture?type=large",
    },
    Object {
      "id": 70,
      "live": 0,
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/13_23_5970_profile.png",
    },
    Object {
      "id": 27,
      "live": 0,
      "u_profile_pic": "https://graph.facebook.com/395585250857991/picture?type=large",
    },
    Object {
      "id": 1823,
      "live": 0,
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/09_54_401823_profile.png",
    },
  ],
  "tag": Array [
    Object {
      "id": 8,
      "t_color_code": "#975565",
      "t_count": 58,
      "t_name": "#shorttrip",
      "t_status": "active",
    },
    Object {
      "id": 151,
      "t_color_code": "#de6429",
      "t_count": 56,
      "t_name": "#singing",
      "t_status": "active",
    },
    Object {
      "id": 2,
      "t_color_code": "#958882",
      "t_count": 56,
      "t_name": "#singing",
      "t_status": "active",
    },
    Object {
      "id": 4,
      "t_color_code": "#778766",
      "t_count": 54,
      "t_name": "#funtime",
      "t_status": "active",
    },
    Object {
      "id": 24,
      "t_color_code": "#778766",
      "t_count": 54,
      "t_name": "#popmusic",
      "t_status": "active",
    },
    Object {
      "id": 16,
      "t_color_code": "#009848",
      "t_count": 52,
      "t_name": "#party",
      "t_status": "active",
    },
    Object {
      "id": 21,
      "t_color_code": "#009848",
      "t_count": 51,
      "t_name": "#happyweekend",
      "t_status": "active",
    },
    Object {
      "id": 1,
      "t_color_code": "#CCAAEE",
      "t_count": 51,
      "t_name": "#beautytips",
      "t_status": "active",
    },
    Object {
      "id": 7,
      "t_color_code": "#958882",
      "t_count": 50,
      "t_name": "#nightout",
      "t_status": "active",
    },
    Object {
      "id": 18,
      "t_color_code": "#975565",
      "t_count": 50,
      "t_name": "#beyourvalentine",
      "t_status": "active",
    },
  ],
  "toprank": Array [
    Object {
      "id": 7397,
      "live": 0,
      "rank": "9265",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/16_46_397397_profile.png",
    },
    Object {
      "id": 3018,
      "live": 0,
      "rank": "4471",
      "u_profile_pic": "https://graph.facebook.com/1583112471734457/picture?type=large",
    },
    Object {
      "id": 973,
      "live": 0,
      "rank": "2240",
      "u_profile_pic": "https://graph.facebook.com/933924376762581/picture?type=large",
    },
    Object {
      "id": 287,
      "live": 0,
      "rank": "1080",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/10_30_25287_profile.png",
    },
    Object {
      "id": 2494,
      "live": 0,
      "rank": "641",
      "u_profile_pic": "https://graph.facebook.com/460452244350459/picture?type=large",
    },
    Object {
      "id": 7462,
      "live": 0,
      "rank": "545",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/18_09_037462_profile.png",
    },
    Object {
      "id": 3194,
      "live": 0,
      "rank": "472",
      "u_profile_pic": "https://graph.facebook.com/2018473215104706/picture?type=large",
    },
    Object {
      "id": 3861,
      "live": 0,
      "rank": "407",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/19_52_363861_profile.png",
    },
    Object {
      "id": 1282,
      "live": 0,
      "rank": "400",
      "u_profile_pic": "https://graph.facebook.com/382061405577546/picture?type=large",
    },
    Object {
      "id": 1871,
      "live": 0,
      "rank": "362",
      "u_profile_pic": "https://graph.facebook.com/1946487648959127/picture?type=large",
    },
  ],
}
`;

exports[`Hlwint API Service able to get nearby user 1`] = `
Object {
  "data": Array [
    Object {
      "id": 83,
      "live": 0,
      "u_first_name": "ေမသဥၨာ",
      "u_follower_count": 443,
      "u_last_name": "ေက်ာ္",
      "u_nick_name": "​ေမ83",
      "u_profile_pic": "https://graph.facebook.com/513977715626828/picture?type=large",
    },
    Object {
      "id": 2494,
      "live": 0,
      "u_first_name": "Khay Sett",
      "u_follower_count": 436,
      "u_last_name": "Thwin",
      "u_nick_name": "khaysett2494",
      "u_profile_pic": "https://graph.facebook.com/460452244350459/picture?type=large",
    },
    Object {
      "id": 5549,
      "live": 0,
      "u_first_name": "Nang",
      "u_follower_count": 433,
      "u_last_name": "Sein",
      "u_nick_name": "nansandar5549",
      "u_profile_pic": "https://graph.facebook.com/464218360641334/picture?type=large",
    },
    Object {
      "id": 2499,
      "live": 0,
      "u_first_name": "PhomeShein",
      "u_follower_count": 391,
      "u_last_name": "Htet",
      "u_nick_name": "phomeshein2499",
      "u_profile_pic": "https://graph.facebook.com/901009120057896/picture?type=large",
    },
    Object {
      "id": 1974,
      "live": 0,
      "u_first_name": "Paing Oak",
      "u_follower_count": 332,
      "u_last_name": "Soe Aung",
      "u_nick_name": "paingoak1974",
      "u_profile_pic": "https://graph.facebook.com/2024677957775066/picture?type=large",
    },
    Object {
      "id": 1877,
      "live": 0,
      "u_first_name": "Eaindray",
      "u_follower_count": 319,
      "u_last_name": "Chit Su",
      "u_nick_name": "eaindray1877",
      "u_profile_pic": "https://graph.facebook.com/818952491620096/picture?type=large",
    },
    Object {
      "id": 7397,
      "live": 0,
      "u_first_name": "Poe Kyar",
      "u_follower_count": 314,
      "u_last_name": "Phyu Khin",
      "u_nick_name": "zwe7397",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/16_46_397397_profile.png",
    },
    Object {
      "id": 2353,
      "live": 0,
      "u_first_name": "April",
      "u_follower_count": 298,
      "u_last_name": "Pink",
      "u_nick_name": "april2353",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/19_44_582353_profile.png",
    },
    Object {
      "id": 1871,
      "live": 0,
      "u_first_name": "Thu",
      "u_follower_count": 298,
      "u_last_name": "Ta",
      "u_nick_name": "thu1871",
      "u_profile_pic": "https://graph.facebook.com/1946487648959127/picture?type=large",
    },
    Object {
      "id": 1888,
      "live": 0,
      "u_first_name": "May",
      "u_follower_count": 293,
      "u_last_name": "Nanda",
      "u_nick_name": "may1888",
      "u_profile_pic": "https://dashboard.imliveapp.com/public/mlive_img/11_27_411888_profile.png",
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to get stream by used tags 1`] = `
Object {
  "data": Array [
    Object {
      "id": 384,
      "live": 1,
      "u_first_name": "Ko",
      "u_follower_count": 1,
      "u_last_name": "Kyaw",
      "u_nick_name": "ko384",
      "u_profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to get user follower 1`] = `
Object {
  "data": Array [],
  "message": "success",
}
`;

exports[`Hlwint API Service able to get viewer ended 1`] = `
Object {
  "data": Object {
    "biography": null,
    "first_name": "Ko",
    "following": "false",
    "id": 384,
    "last_name": "Kyaw",
    "nick_name": "ko384",
    "profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    "view_count": 1,
  },
  "message": "success",
}
`;

exports[`Hlwint API Service able to get viewer list 1`] = `
Object {
  "broadcaster_coin": 3620,
  "data": Array [
    Object {
      "id": 384,
      "u_first_name": "Ko",
      "u_follower_count": 1,
      "u_last_name": "Kyaw",
      "u_nick_name": "ko384",
      "u_profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to input task to task log 1`] = `
Object {
  "message": "success",
}
`;

exports[`Hlwint API Service able to join stream 1`] = `
Object {
  "message": "success",
  "viewer_count": 1,
}
`;

exports[`Hlwint API Service able to leave the stream 1`] = `
Object {
  "message": "success",
  "viewer_count": 0,
}
`;

exports[`Hlwint API Service able to list tags 1`] = `
Object {
  "data": Array [
    Object {
      "id": 8,
      "t_color_code": "#975565",
      "t_count": 58,
      "t_name": "#shorttrip",
      "t_status": "active",
    },
    Object {
      "id": 2,
      "t_color_code": "#958882",
      "t_count": 56,
      "t_name": "#singing",
      "t_status": "active",
    },
    Object {
      "id": 151,
      "t_color_code": "#de6429",
      "t_count": 56,
      "t_name": "#singing",
      "t_status": "active",
    },
    Object {
      "id": 4,
      "t_color_code": "#778766",
      "t_count": 54,
      "t_name": "#funtime",
      "t_status": "active",
    },
    Object {
      "id": 24,
      "t_color_code": "#778766",
      "t_count": 54,
      "t_name": "#popmusic",
      "t_status": "active",
    },
    Object {
      "id": 16,
      "t_color_code": "#009848",
      "t_count": 52,
      "t_name": "#party",
      "t_status": "active",
    },
    Object {
      "id": 21,
      "t_color_code": "#009848",
      "t_count": 51,
      "t_name": "#happyweekend",
      "t_status": "active",
    },
    Object {
      "id": 1,
      "t_color_code": "#CCAAEE",
      "t_count": 51,
      "t_name": "#beautytips",
      "t_status": "active",
    },
    Object {
      "id": 7,
      "t_color_code": "#958882",
      "t_count": 50,
      "t_name": "#nightout",
      "t_status": "active",
    },
    Object {
      "id": 18,
      "t_color_code": "#975565",
      "t_count": 50,
      "t_name": "#beyourvalentine",
      "t_status": "active",
    },
    Object {
      "id": 19,
      "t_color_code": "#778766",
      "t_count": 50,
      "t_name": "#Mondaymotivation",
      "t_status": "active",
    },
    Object {
      "id": 28,
      "t_color_code": "#B8860B",
      "t_count": 50,
      "t_name": "#rapper",
      "t_status": "active",
    },
    Object {
      "id": 3,
      "t_color_code": "#525997",
      "t_count": 50,
      "t_name": "#beautytutorials",
      "t_status": "active",
    },
    Object {
      "id": 26,
      "t_color_code": "#D97A64",
      "t_count": 33,
      "t_name": "#painting",
      "t_status": "active",
    },
    Object {
      "id": 144,
      "t_color_code": "#566b88",
      "t_count": 12,
      "t_name": "#tag",
      "t_status": "active",
    },
    Object {
      "id": 207,
      "t_color_code": "#c095de",
      "t_count": 12,
      "t_name": "TESTAG",
      "t_status": "active",
    },
    Object {
      "id": 5,
      "t_color_code": "#664653",
      "t_count": 5,
      "t_name": "#TGIF",
      "t_status": "active",
    },
    Object {
      "id": 145,
      "t_color_code": "#6df2e2",
      "t_count": 5,
      "t_name": "#dinner",
      "t_status": "active",
    },
    Object {
      "id": 30,
      "t_color_code": "#00008B",
      "t_count": 5,
      "t_name": "#beastar",
      "t_status": "active",
    },
    Object {
      "id": 178,
      "t_color_code": "#18481d",
      "t_count": 4,
      "t_name": "#Cooking",
      "t_status": "active",
    },
    Object {
      "id": 152,
      "t_color_code": "#cca7af",
      "t_count": 4,
      "t_name": "#phyu",
      "t_status": "active",
    },
    Object {
      "id": 140,
      "t_color_code": "#25ac6c",
      "t_count": 4,
      "t_name": "#Khinyadanar",
      "t_status": "active",
    },
    Object {
      "id": 27,
      "t_color_code": "#A9A9A9",
      "t_count": 4,
      "t_name": "#cooking",
      "t_status": "active",
    },
    Object {
      "id": 168,
      "t_color_code": "#6cd3e3",
      "t_count": 3,
      "t_name": "#shooting",
      "t_status": "active",
    },
    Object {
      "id": 141,
      "t_color_code": "#3520ea",
      "t_count": 3,
      "t_name": "#Ayelinhtike",
      "t_status": "active",
    },
    Object {
      "id": 154,
      "t_color_code": "#1bd23b",
      "t_count": 3,
      "t_name": "#cosplay",
      "t_status": "active",
    },
    Object {
      "id": 171,
      "t_color_code": "#db5031",
      "t_count": 3,
      "t_name": "#tags",
      "t_status": "active",
    },
    Object {
      "id": 126,
      "t_color_code": "#5eeb78",
      "t_count": 2,
      "t_name": "#tired",
      "t_status": "active",
    },
    Object {
      "id": 150,
      "t_color_code": "#e4a8e2",
      "t_count": 2,
      "t_name": "#haha",
      "t_status": "active",
    },
    Object {
      "id": 131,
      "t_color_code": "#2f2e0e",
      "t_count": 2,
      "t_name": "#coffee",
      "t_status": "active",
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to modify end time 1`] = `
Object {
  "message": "success",
}
`;

exports[`Hlwint API Service able to retrieve live data 1`] = `
Object {
  "live_lists": Array [
    Object {
      "broadcast_title": "bb",
      "first_name": "Khant",
      "id": 625,
      "larger_profile_pic": null,
      "last_name": "Soe",
      "location": "",
      "nick_name": "khant625",
      "profile_pic": "https://graph.facebook.com/371163280020749/picture?type=large",
      "tag": Array [],
      "type": 1,
      "view_count": 34,
    },
  ],
  "message": "success",
}
`;

exports[`Hlwint API Service able to retrieve live data 2`] = `
Array [
  Object {
    "broadcast_title": "bb",
    "first_name": "Khant",
    "id": 625,
    "larger_profile_pic": null,
    "last_name": "Soe",
    "location": "",
    "nick_name": "khant625",
    "profile_pic": "https://graph.facebook.com/371163280020749/picture?type=large",
    "tag": Array [],
    "type": 1,
    "view_count": 34,
  },
]
`;

exports[`Hlwint API Service able to upload last device 1`] = `
Object {
  "message": "success",
  "promotion": "true",
}
`;

exports[`Hlwint API Service ablle to get user following 1`] = `
Object {
  "data": Array [],
  "message": "success",
}
`;

exports[`Hlwint API Service have a correct login service 1`] = `
Object {
  "data": Object {
    "bot": 0,
    "data_usage": null,
    "id": 384,
    "u_account_status": "active",
    "u_biography": null,
    "u_city": "Pathein",
    "u_coins": 3610,
    "u_created_time": "2017-11-13 15:36:22",
    "u_date_of_birth": "null",
    "u_device_os": "android",
    "u_duration": "00:00:00",
    "u_email": "null",
    "u_facebook_id": "367599367030660",
    "u_fan_count": 0,
    "u_first_name": "Ko",
    "u_follower_count": 1,
    "u_full_name": "Ko Kyaw",
    "u_gender": "female",
    "u_google_id": "null",
    "u_income": 0,
    "u_ip_address": "119.2.52.244",
    "u_key_id": "91600",
    "u_larger_profile_pic": null,
    "u_last_device": "android test",
    "u_last_login_time": "2018-01-15 10:47:55",
    "u_last_name": "Kyaw",
    "u_nick_name": "ko384",
    "u_phone_number": "09",
    "u_profile_pic": "https://graph.facebook.com/367599367030660/picture?type=large",
    "u_reason_banned": "",
    "u_reward_status": 0,
    "u_token": "EF0h6izH5nXNITmdyknOwGLjGBkMFGOeqFSfHfzuQZSYNFosCmsAxFBWTw93",
    "u_type": 1,
  },
  "message": "success",
  "version": "18",
}
`;
